funzione ricerca funzionante (dovrei testarla con il db carico)

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,7 +52,9 @@
 				</div>
 				<hr class = "div-cards-delimiter">
 				<div id = "cards-container">
+					<div id = "div-cards-container">
 					
+					</div>
 				</div>
 				<hr class = "div-cards-delimiter">
 			</div>
@@ -63,7 +65,7 @@
 					<button id="btn-load" class="btn-standard" onclick="onLoadBtnClick()">CARICA</button>
 				</div>
 				<div id = "div-deck-container">
-				
+					<h2><font color="#FFF">---  Work in progress  ---</font></h2>
 				</div>
 			</div>
 		</div>
