aggiunta parte sul sito web

--- a/Website/index.html
+++ b/Website/index.html
@@ -28,8 +28,7 @@
 			<div id = "nav-page-1" class = "nav-page current-page">
 				<div id = "img-background-home" class = "img-container">
 					<div id = "home-text"><div id = "home-text-1-line" class = "home-text-line">Magic</span> is real</div><div id = "home-text-2-line" class = "home-text-line">with the right cards</div></div>
-				</div>
-            </div>
+				</div></div>
         
 			<div id = "nav-page-2" class = "nav-page">
 				<div id = "search-bar-container">
