modifica immagine background e modifica nella visualizzazione del mazzo

--- a/Website/index.html
+++ b/Website/index.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<hr class = "div-cards-delimiter">
-				<div id = "cards-container">
+				<div id = "cards-container" class = "hidden-scrollbar">
 					<div id = "div-cards-container">
 					
 					</div>
@@ -62,7 +62,11 @@
 					<button id="btn-save" class="btn-standard" onclick="onSaveBtnClick()">SALVA</button>
 					<button id="btn-load" class="btn-standard" onclick="onLoadBtnClick()">CARICA</button>
 				</div>
-				<div id = "div-deck-container">
+				<hr class = "div-cards-delimiter">
+				<div id = "deck-container" class = "hidden-scrollbar">
+					<div id = "div-deck-container">
+					
+					</div>
 				</div>
 			</div>
 		</div>
