visualizzazione carte del mazzo e rimozione

--- a/Website/index.html
+++ b/Website/index.html
@@ -68,6 +68,7 @@
 					
 					</div>
 				</div>
+				<div id = "card_information" class = "div-popup hidden-popup"></div>
 			</div>
 		</div>
     </body>
